<resources>
    <string name="app_name">carpool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="inputEmailHint">Enter Email</string>
    <string name="inputPhoneNumberHint">Enter Phone Number</string>
    <string name="inputNameHint">Enter Name</string>
    <string name="inputPasswordHint">Enter Password</string>

    <string name="book_car">Car</string>
    <string name="book_rikshaw">Rikshaw</string>
    <string name="book_bike">Bike</string>
    <string name="book_package">Package</string>
    <string name="book_car_intercity">Car Intercity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="google_map_api_key">AIzaSyBDZC8tih5uhuykTFvcDxcWeUYoiqkPPak</string>
</resources>
